Creating contents in services version

--- a/Content.WebApi/appsettings.json
+++ b/Content.WebApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Content": "Data Source=test.db;Version=3"
+  },
+  "UseORM": true
 }
